# UCM

programación avanzada en python/Ejercicio4/: pyproject.toml
programación avanzada en python/Ejercicio4/geom2d/: __init__.py  geom2d.py
programación avanzada en python/Ejercicio4/geom2d.egg-info/: PKG-INFO  SOURCES.txt
programación avanzada en python/Ejercicio4/tests/: test_point.py  test_vector.py
programación avanzada en python/NumPy/Ejercicio1/: ith.ipynb  ith.py
programación avanzada en python/NumPy/Ejercicio2/: zonal_stat.ipynb  zonal_stat.py
programación avanzada en python/ej1/: sketch.py
